--- a/Getresume.AI/package.json
+++ b/Getresume.AI/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.9.4",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.2",
+    "bootstrap": "^5.3.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.446.0",
